--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,13 +75,11 @@ dependencies {
     implementation "androidx.camera:camera-view:1.0.0-alpha10"
 
     // TensorFlow Lite dependencies
-    def tfl_version = "0.0.0-nightly"
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
-    implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
-    implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
-    implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.4.3'
+    implementation("org.tensorflow:tensorflow-lite:2.11.0")
+    implementation("org.tensorflow:tensorflow-lite-gpu:2.11.0")
     // Dependency for Segmentation with Task Library
-    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.3'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
