--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,12 @@ dependencies {
 
     // TensorFlow Lite dependencies
     def tfl_version = "0.0.0-nightly"
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc2'
-    implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
-    implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.4.3'
+    implementation("org.tensorflow:tensorflow-lite:2.11.0")
+    implementation("org.tensorflow:tensorflow-lite-gpu:2.11.0")
     implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
     // Dependency for Segmentation with Task Library
-    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly'
+    //implementation 'org.tensorflow:tensorflow-lite-task-vision:0.0.0-nightly'
 
     implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly'
 
